[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A Python Flask template project"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"

[tool.poetry.dependencies]
flask = ">=3.1.0"
flask-cors = ">=5.0.1"
requests = ">=2.32.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
