[tool.poetry]
name = "rdeventsfm"
version = "0.1.0"
description = "RD Events FM site"
authors = ["kiwisz <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
flask = "^2.3.3"
requests = "^2.31.0"  # optional, if you're using requests
# Add any other dependencies here

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
